# snarkl

./: .gitignore  BUILD  LICENSE  Makefile  README.md  prepare-depends.sh  r1cs.hs  snarkl.cabal
cppsrc/: Makefile  snarky.cpp  test.infile
experiments/: benchmark-data-112215.txt  benchmark-data-11222015.ods  benchmark-data-11232015.txt  benchmark-data-112415-1.txt  benchmark-data-112415-2.txt  benchmark-data-112415.ods  benchmark-data-112415.txt  benchmark-data-112915.txt  benchmark-data-113015.txt  benchmark-data-9182015.ods  benchmark-data-9182015.txt  benchmark-data.ods  benchmark-input.plot  benchmark.plot  ratio.plot
scripts/: run-keygen.sh  run-proofgen.sh  run-r1cs.sh
src/: Birkhoff.hs  Common.hs  Compile.hs  Constraints.hs  Dataflow.hs  Errors.hs  Expr.hs  Field.hs  Games.hs  HashSet.hs  Interp.hs  Keccak.hs  Lam.hs  Lang.hs  List.hs  Main.hs  Makefile  Peano.hs  Poly.hs  R1CS.hs  RunTests.hs  Serialize.hs  SimplMonad.hs  Simplify.hs  Solve.hs  Source.hs  Syntax.hs  SyntaxMonad.hs  TExpr.hs  Tests.hs  Toplevel.hs  UnionFind.hs  common.hs  compile.hs  constraints.hs  field.hs  keccak.hs  lang.hs  main.hs  r1cs.hs  (+2 more)
src/app/keccak/: Main.hs
src/examples/: Basic.hs  Keccak.hs  Lam.hs  List.hs  Matrix.hs  Peano.hs  Queue.hs  SHA1.hs  Stack.hs  Tree.hs
src/testsuite/benchmarks/: Harness.hs  Main.hs
src/testsuite/tests/: Main.hs  UnitTests.hs
